# paintcam

./: .gitignore  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json
engine/: gesture-config.example.json  paintcam_engine.py
engine/paintcam/: __init__.py  app.py  gestures.py  hand_tracking.py
engine/tests/: test_gestures.py  test_hand_tracking.py  test_helpers.py
scripts/: download-mediapipe-models.py  export-source-zip.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
