[package]
name = "paintcam"
version = "0.1.0"
description = "Gesture-controlled paint camera"
authors = ["PaintCam"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
